Spacing fix and new layer buttons

--- a/client/styles/Layers.module.css
+++ b/client/styles/Layers.module.css
@@ -4,6 +4,7 @@
   overflow-y: auto;
   background: #c9c9c9;
   max-width: 100%;
+  min-width: 100%;
 }
 
 .imageReelImage {
